k8s/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-svc
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 80
